--- a/base/templates/base/profile.html
+++ b/base/templates/base/profile.html
@@ -32,7 +32,7 @@
 
       <div class="roomList__header">
         <div>
-          <h2>Study Rooms Hosted by dennis_ivy</a>
+          <h2>Study Rooms Hosted by Rabah Djebbes</a>
           </h2>
         </div>
       </div>
