--- a/base/templates/base/topics.html
+++ b/base/templates/base/topics.html
@@ -33,7 +33,7 @@
 
         <ul class="topics__list">
           <li>
-            <a href="{% url 'topics' %}" class="active">All <span>{{topics.count}}</span></a>
+            <a href="{% url 'home' %}" class="active">All <span></span></a>
           </li>
           {% for topic in topics %}
           <li>
