--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -18,7 +18,7 @@
           {% csrf_token %}
           <div class="form__group form__group">
             <label for="room_name">Email</label>
-            <input id="username" name="email" type="email" placeholder="e.g. dennis_ivy@email.com />
+            <input id="username" name="email" type="email" placeholder="e.g. rabahwork@email.com />
           </div>
           <div class=" form__group">
             <label for="password">Password</label>
@@ -86,8 +86,8 @@
         </form>
 
         <div class="auth__action">
-          <p>Already signed up yet?</p>
-          <a href="{% url 'login' %}" class="btn btn--link">Sign Up</a>
+          <p>Already signed up?</p>
+          <a href="{% url 'login' %}" class="btn btn--link">Sign In</a>
         </div>
       </div>
     </div>
